--- a/CasperSplash/CasperSplashController.storyboard
+++ b/CasperSplash/CasperSplashController.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16C48b" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="UoU-0S-EqW">
+<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2657" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="UoU-0S-EqW">
     <dependencies>
         <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="11542"/>
@@ -30,7 +30,7 @@
         <scene sceneID="AJn-Gn-QaV">
             <objects>
                 <viewController title="Main View" storyboardIdentifier="mainView" id="qDQ-T9-zeE" customClass="CasperSplashMainViewController" customModule="CasperSplash" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" wantsLayer="YES" id="VI7-LS-rJR">
+                    <view key="view" wantsLayer="YES" id="VI7-LS-rJR" customClass="CasperSplashMainView" customModule="CasperSplash" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="800" height="600"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
